Update with requests-async based test_client
Update with requests-async based test_client

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ deps =
     pytest-sanic
     pytest-sugar
     aiohttp>=2.3,<=3.2.1
+    requests-async
     chardet<=2.3.0
     beautifulsoup4
     gunicorn
