--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
-envlist = py35, py36, py37, {py35,py36,py37}-no-ext, lint, check
+envlist = py36, py37, {py36,py37}-no-ext, lint, check
 
 [testenv]
 usedevelop = True
 setenv =
-    {py35,py36,py37}-no-ext: SANIC_NO_UJSON=1
-    {py35,py36,py37}-no-ext: SANIC_NO_UVLOOP=1
+    {py36,py37}-no-ext: SANIC_NO_UJSON=1
+    {py36,py37}-no-ext: SANIC_NO_UVLOOP=1
 deps =
     coverage
     pytest==4.1.0
