Add black config to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ deps =
 
 commands =
     flake8 sanic
-    black --check --verbose sanic
+    black --config ./.black.toml --check --verbose sanic
     isort --check-only --recursive sanic
 
 [testenv:check]
